# The-Forge

./: .gitignore  CMakeLists.txt
Common_3/OS/Core/: GPUConfig.h  RingBuffer.h  ThreadSystem.cpp
Common_3/OS/Darwin/: iOSBase.mm  macOSBase.mm
Common_3/OS/FileSystem/: AssimpIOStream.h  AssimpIOSystem.h  SystemRun.cpp  ZipFileStream.cpp  ZipFileSystem.cpp
Common_3/OS/Image/: Image.cpp  Image.h  ImageHelper.h
Common_3/OS/Input/: InputSystem.cpp
Common_3/OS/Interfaces/: IApp.h  ILog.h  IOperatingSystem.h  IProfiler.h
Common_3/OS/Linux/: LinuxBase.cpp  LinuxThread.cpp
Common_3/OS/Logging/: Log.cpp  Log.h
Common_3/OS/Math/: MathTypes.h
Common_3/OS/MemoryTracking/: MemoryTracking.cpp
Common_3/OS/Windows/: WindowsBase.cpp  WindowsFileSystem.cpp  WindowsThread.cpp
Common_3/Renderer/: CommonShaderReflection.cpp  GpuProfiler.cpp  GpuProfiler.h  IRenderer.h  ResourceLoader.cpp  ResourceLoader.h
Common_3/Renderer/Direct3D11/: Direct3D11.cpp  Direct3D11CapBuilder.h  Direct3D11ShaderReflection.cpp
Common_3/Renderer/Direct3D12/: Direct3D12.cpp  Direct3D12CapBuilder.h  Direct3D12Hooks.cpp  Direct3D12MemoryAllocator.h  Direct3D12Raytracing.cpp  Direct3D12ShaderReflection.cpp
Common_3/Renderer/Metal/: MetalMemoryAllocator.h  MetalRaytracing.mm  MetalRenderer.mm  MetalShaderReflection.mm
Common_3/Renderer/Vulkan/: Vulkan.cpp  VulkanCapsBuilder.h  VulkanRaytracing.cpp  VulkanShaderReflection.cpp
Common_3/Tools/AssetPipeline/src/: AssetLoader.cpp  AssetLoader.h  AssetPipeline.cpp  AssetPipeline.h  AssetPipelineCmd.cpp  TFXImporter.cpp  TFXImporter.h  TressFXAsset.cpp  TressFXAsset.h  gltfpack.cpp  gltfpack.h
Common_3/Tools/AssimpImporter/: AssimpImporter.cpp  AssimpImporter.h
Common_3/Tools/SpirvTools/: SpirvTools.cpp  SpirvTools.h
Examples_3/Unit_Tests/src/: CMakeLists.txt
Examples_3/Unit_Tests/src/01_Transformations/: 01_Transformations.cpp
Examples_3/Unit_Tests/src/02_Compute/: 02_Compute.cpp
Examples_3/Unit_Tests/src/03_MultiThread/: 03_MultiThread.cpp
Examples_3/Unit_Tests/src/04_ExecuteIndirect/: 04_ExecuteIndirect.cpp  AsteroidSim.h  TextureGen.h
Examples_3/Unit_Tests/src/05_FontRendering/: 05_FontRendering.cpp
Examples_3/Unit_Tests/src/06_MaterialPlayground/: 06_MaterialPlayground.cpp
Examples_3/Unit_Tests/src/07_Tessellation/: 07_Tessellation.cpp
Examples_3/Unit_Tests/src/08_GltfViewer/: 08_GltfViewer.cpp
Examples_3/Unit_Tests/src/09_LightShadowPlayground/: 09_LightShadowPlayground.cpp  Geometry.cpp  Geometry.h
Examples_3/Unit_Tests/src/09a_HybridRaytracing/: 09a_HybridRaytracing.cpp
Examples_3/Unit_Tests/src/10_PixelProjectedReflections/: 10_PixelProjectedReflections.cpp
Examples_3/Unit_Tests/src/11_MultiGPU/: 11_MultiGPU.cpp
Examples_3/Unit_Tests/src/12_ZipFileSystem/: 12_ZipFileSystem.cpp
Examples_3/Unit_Tests/src/13_UserInterface/: 13_UserInterface.cpp
Examples_3/Unit_Tests/src/14_WaveIntrinsics/: 14_WaveIntrinsics.cpp
Examples_3/Unit_Tests/src/15_Transparency/: 15_Transparency.cpp
Examples_3/Unit_Tests/src/16_Raytracing/: 16_Raytracing.cpp
Examples_3/Unit_Tests/src/16a_SphereTracing/: 16a_SphereTracing.cpp
Examples_3/Unit_Tests/src/17_EntityComponentSystem/: 17_EntityComponentSystem.cpp
Examples_3/Unit_Tests/src/17_EntityComponentSystem/Components/: MoveComponent.cpp  MoveComponent.h  PositionComponent.cpp  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h  WorldBoundsComponent.cpp  WorldBoundsComponent.h
Examples_3/Unit_Tests/src/17_EntityComponentSystem/Representations/: MoveRepresentation.cpp  MoveRepresentation.h  PositionRepresentation.cpp  PositionRepresentation.h  SpriteRepresentation.cpp  SpriteRepresentation.h  WorldBoundsRepresentation.cpp  WorldBoundsRepresentation.h
Examples_3/Unit_Tests/src/18_VirtualTexture/: 18_VirtualTexture.cpp
Examples_3/Unit_Tests/src/21_Playback/: 21_Playback.cpp
Examples_3/Unit_Tests/src/22_Blending/: 22_Blending.cpp
Examples_3/Unit_Tests/src/23_JointAttachment/: 23_JointAttachment.cpp
Examples_3/Unit_Tests/src/24_PartialBlending/: 24_PartialBlending.cpp
Examples_3/Unit_Tests/src/25_AdditiveBlending/: 25_AdditiveBlending.cpp
Examples_3/Unit_Tests/src/26_BakedPhysics/: 26_BakedPhysics.cpp
Examples_3/Unit_Tests/src/27_MultiThread/: 27_MultiThread.cpp
Examples_3/Unit_Tests/src/28_Skinning/: 28_Skinning.cpp
Examples_3/Unit_Tests/src/29_InverseKinematic/: 29_InverseKinematic.cpp
Examples_3/Unit_Tests/src/31_Audio/: 31_Audio.cpp
Examples_3/Visibility_Buffer/src/: CMakeLists.txt  Geometry.cpp  Geometry.h  Visibility_Buffer.cpp
Middleware_3/Animation/: AnimatedObject.cpp  AnimatedObject.h  Animation.h  Clip.h  ClipController.h  ClipMask.h  Rig.h  SkeletonBatcher.h
Middleware_3/ECS/: BaseComponent.cpp  BaseComponent.h  ComponentRepresentation.cpp  ComponentRepresentation.h  EntityManager.cpp  EntityManager.h
Middleware_3/LUA/: LuaManager.cpp  LuaManager.h  LuaManagerCommon.h  LuaManagerImpl.cpp  LuaManagerImpl.h
Middleware_3/PaniniProjection/: Panini.cpp  Panini.h
Middleware_3/ParallelPrimitives/: ParallelPrimitives.cpp  ParallelPrimitives.h
Middleware_3/Text/: Fontstash.cpp  Fontstash.h
Middleware_3/UI/: AppUI.cpp  AppUI.h  ImguiGUIDriver.cpp  imgui_user.cpp  imgui_user.h
